v0.0.9      2014-03-28
    - Add an explicit symbol import on "use PDL"/etc.
    - Add get_scan_ids_aref() and lookup_scan_idx_based_on_id() to
    AI::Pathfinding::OptimizeMultiple::DataInputObj .
    - Add the $args parameter with the 'chosen_scans' key to
    AI::Pathfinding::OptimizeMultiple::simulate_board() .

v0.0.8      2014-02-02
    - Made sure the =encoding directive is on top of the file in
    bin/optimize-game-ai-multi-tasking .

v0.0.7      2014-01-26
    - Minimal version of perl - 5.012 in the prereqs (could be lower, possibly).
        - For Kwalitee.
    - Remove the Makefile.PL so we will have "metayml has provides".
        - Now it's Build.PL-only.
    - Add provides to the META.yml.

v0.0.6      2014-01-25
    - Add "use strict;" and "use warnings;" to MooX::late modules.
        - Kwalitee
    - Remove the ^Rejects and ^scripts sub-directories.
        - They were confusing CPANTS and reduced our Kwalitee.

v0.0.5      2013-01-22
    - skipping compile test for scripts/bump-version-number.pl .
        - it is for use by the module's maintainer and has
        non-essential prereqs.

v0.0.4      2013-01-20

    - Add missing Prerequisites
        - MooX::late
        - MooX::Types::MooseLike::Base

v0.0.3      2013-01-18

    - Fixed broken POD for hyperlinks.

v0.0.2      2013-01-17

    - Fixed the POD - removed extraneous sections and added a NAME handler.
        - Part of it was caused due to a Pod::Weaver misconfiguration

v0.0.1      2013-01-17

    - First version, released on an unsuspecting world.

    - Everything is still subject to change and break.