@@ -16,7 +16,7 @@ use MooX qw/late/;
 
 use PDL;
 
-our $VERSION = '0.0.8';
+our $VERSION = '0.0.9';
 
 has chosen_scans => (isa => 'ArrayRef', is => 'rw');
 has _iter_idx => (isa => 'Int', is => 'rw', default => sub { 0; },);
