@@ -11,7 +11,7 @@ use IO::File;
 use AI::Pathfinding::OptimizeMultiple;
 use AI::Pathfinding::OptimizeMultiple::PostProcessor;
 
-our $VERSION = '0.0.8';
+our $VERSION = '0.0.9';
 
 # TODO : restore later.
 # use MyInput;
