@@ -4,6 +4,8 @@ v0.0.9      2014-03-28
     AI::Pathfinding::OptimizeMultiple::DataInputObj .
     - Add the $args parameter with the 'chosen_scans' key to
     AI::Pathfinding::OptimizeMultiple::simulate_board() .
+    - Add support for some extra required options in
+    AI::Pathfinding::OptimizeMultiple::DataInputObj’s time-scan.pl.
 
 v0.0.8      2014-02-02
     - Made sure the =encoding directive is on top of the file in
